@@ -4,5 +4,6 @@
   <include file="profiles.zcml" />
   <include file="skins.zcml" />
   <include package=".upgrades" />
+  <include package=".browser" />
 
 </configure>
