@@ -4,45 +4,7 @@
 
 <object name="document_actions" meta_type="CMF Action Category">
 
- <object name="twitter" meta_type="CMF Action" i18n:domain="plone">
-   <property name="title" i18n:translate="">Tweet this</property>
-   <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:http://twitter.com/home?status=${object_url}</property>
-   <property name="link_target"></property>
-   <property name="icon_expr">string:$portal_url/twitter16x16.png</property>
-   <property name="available_expr"></property>
-   <property name="permissions">
-    <element value="View"/>
-   </property>
-   <property name="visible">True</property>
 
-  </object>
-  <object name="delicious" meta_type="CMF Action" i18n:domain="plone">
-   <property name="title" i18n:translate="">Bookmark on Delicious</property>
-   <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:http://delicious.com/post?url=${object_url}&amp;title=${object/Title}</property>
-   <property name="link_target"></property>
-   <property name="icon_expr">string:$portal_url/delicious16x16.png</property>
-   <property name="available_expr"></property>
-   <property name="permissions">
-    <element value="View"/>
-   </property>
-   <property name="visible">True</property>
-  </object>
-
-  <object name="facebook" meta_type="CMF Action" i18n:domain="plone">
-   <property name="title" i18n:translate="">Share on Facebook</property>
-   <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:http://www.facebook.com/sharer.php?u=${object_url}&amp;t=${object/Title}</property>
-   <property name="link_target"></property>
-   <property name="icon_expr">string:$portal_url/facebook16x16.png</property>
-   <property name="available_expr"></property>
-   <property name="permissions">
-    <element value="View"/>
-   </property>
-   <property name="visible">True</property>
-  </object>
-
- </object>
+</object>
 
 </object>
