@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<!-- This file holds the setup configuration for the portal_css tool. -->
+
+<object name="portal_css">
+
+    <stylesheet title=""
+        id="++resource++eea.socialmedia.stylesheets/EEASocialMedia.css"        
+        media="screen" rel="stylesheet" rendering="link" cacheable="True" compression="safe" cookable="True" 
+        expression=""
+        />
+
+
+</object>
+
