@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object>
+    
+    <order manager="plone.app.layout.viewlets.interfaces.IBelowContentBody" skinname="*">
+        <viewlet name="eea.socialmedia" insert-after="plone.abovecontenttitle.documentactions" />
+    </order>
+  
+    <hidden manager="plone.app.layout.viewlets.interfaces.IBelowContentBody" skinname="*">
+        <viewlet name="plone.abovecontenttitle.documentactions" />
+    </hidden>
+  
+</object>
